update:定制课程页面

--- a/src/app.less
+++ b/src/app.less
@@ -122,3 +122,18 @@
 .f-as-fe {
   align-self: flex-end;
 }
+
+
+page {
+  height: 100%;
+}
+
+view{
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
