--- a/src/app.less
+++ b/src/app.less
@@ -129,6 +129,13 @@
   align-self: flex-end;
 }
 
+.mr-30{
+  margin-right: 30px;
+}
+
+.ml-10{
+  margin-left: 10px;
+}
 
 page {
   height: 100%;
@@ -142,4 +149,129 @@ view{
   width: 0;
   height: 0;
   color: transparent;
+}
+
+
+.f-10 {
+    font-size: 10px;
+}
+
+.f-12 {
+    font-size: 12px;
+}
+
+.f-14 {
+    font-size: 14px;
+}
+
+.f-16 {
+    font-size: 16px;
+}
+
+.f-18 {
+    font-size: 18px;
+}
+
+.f-20 {
+    font-size: 20px;
+}
+
+.f-22 {
+    font-size: 22px;
+}
+
+.f-24 {
+    font-size: 24px;
+}
+
+.f-26 {
+    font-size: 26px;
+}
+
+.f-28 {
+    font-size: 28px;
+}
+
+.f-30 {
+    font-size: 30px;
+}
+
+.f-32 {
+    font-size: 32px;
+}
+
+.f-34 {
+    font-size: 34px;
+}
+
+.f-36 {
+    font-size: 36px;
+}
+
+.f-38 {
+    font-size: 38px;
+}
+
+.f-40 {
+    font-size: 40px;
+}
+
+.f-42 {
+    font-size: 42px;
+}
+
+.f-44 {
+    font-size: 44px;
+}
+
+.f-46 {
+    font-size: 46px;
+}
+
+.f-48 {
+    font-size: 48px;
+}
+
+.c-ccc {
+    color: #ccc;
+}
+
+.c-999 {
+    color: #999;
+}
+
+.c-666 {
+    color: #666;
+}
+
+.c-333 {
+    color: #333;
+}
+
+.c-fff {
+    color: #fff;
+}
+.c-f46{
+    color: #f46;
+}
+
+.c-f57{
+    color: #f57;
+}
+
+.tip {
+    padding: 10px 0;
+    text-align: center;
+}
+
+.flex1{
+    flex: 1;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.red{
+  color: red;
 }
