--- a/src/app.less
+++ b/src/app.less
@@ -132,6 +132,12 @@
 .mr-30{
   margin-right: 30px;
 }
+.mr-20{
+  margin-right: 20px;
+}
+.mr-10{
+  margin-right: 10px;
+}
 
 .ml-10{
   margin-left: 10px;
